# codex-auth-bridge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/codex_auth_bridge/: __init__.py  cli.py
tests/: test_cli.py
