[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-auth-bridge"
version = "0.1.0"
description = "ChatGPT/Codex auth.json converter and sub2api exporter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "kekexiaoai" }
]
keywords = ["codex", "chatgpt", "auth", "sub2api", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
]

[project.scripts]
codex-auth-bridge = "codex_auth_bridge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
